--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.4
-	yarn_mappings=1.14.4+build.9
-	loader_version=0.4.8+build.159
+	minecraft_version=1.15.2
+	yarn_mappings=1.15.2+build.14
+	loader_version=0.7.8+build.187
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -14,4 +14,4 @@ org.gradle.jvmargs=-Xmx2G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	# fabric_version=0.3.0+build.207
+	# fabric_version=0.4.32+build.292-1.15
